<?xml version="1.0"?>
<package format="2">
  <name>ekf_landing</name>
  <version>0.0.0</version>
  <description>The ekf_landing package</description>
  <maintainer email="mason@kaist.ac.kr">mason</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pypozyx_nodes</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pypozyx_nodes</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
