<?xml version="1.0"?>
<package format="2">
  <name>pypozyx_nodes</name>
  <version>0.0.0</version>
  <description>The cps_msgs package</description>
  <maintainer email="mason@kaist.ac.kr">mason</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

